[package]
name = "nw-bootloader"
version = "0.0.1"
authors = ["willemml <willem@leit.so>"]
edition = "2021"
license = "MIT"
description = "A bootloader for the Numworks n0110 calculator."
repository = "https://github.com/willemml/rustworks"
homepage = "https://github.com/willemml/rustworks"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2"
usbd-dfu = "0.2"
usb-device = "0.2"
heapless = "0.7"
nw-board-support = { git = "https://github.com/nw-rs/board-support.git" }

[[bin]]
name = "nw_bootloader"
path = "src/main.rs"
test = false
bench = false
